# electrical-power-system

./: .env.example  .gitignore  README.md  VSCode答辩演示步骤.md  deepseek_repair_bad_data.py  demo_vscode.py  pyproject.toml  requirements.txt  一键安装环境.bat  一键运行演示.bat  修改说明.md  老师任务对应说明.md
.github/workflows/: tests.yml
examples/: case3_bad_data.py  case3_bad_data_deepseek_fixed.py  case3_bad_data_fixed.py  case3_q_limit.py  case3_repairable.py  case9_demo.py
pfagent/: __init__.py  agent.py  caseio.py  cli.py  llm.py  models.py  repairs.py  reporting.py  solvers.py  validators.py
scripts/: setup.ps1
tests/: test_agent.py
