[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerflow-agent"
version = "0.1.0"
description = "LLM-assisted power flow calculation and repair agent for MATPOWER/PYPOWER cases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2",
    "scipy>=1.10,<1.13",
    "pypower==5.1.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
pfagent = "pfagent.cli:main"

[tool.setuptools]
packages = ["pfagent"]
